--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Realestate landing page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp",
+    "build": "gulp build"
   },
   "repository": {
     "type": "git",
@@ -23,10 +24,11 @@
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-imagemin": "^7.1.0",
-    "gulp-less": "^5.0.0",
     "gulp-newer": "^1.4.0",
     "gulp-rename": "^2.0.0",
-    "gulp-uglify-es": "^2.0.0"
+    "gulp-sass": "^5.1.0",
+    "gulp-uglify-es": "^2.0.0",
+    "sass": "^1.50.0"
   },
   "dependencies": {
     "jquery": "^3.6.0"
